# MemoryEngine

./: .gitignore  README.md  render.yaml
backend/: .env.example  .env.production.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_pages_table.py  003_add_circular_reference_prevention.py  004_create_flashcards_table.py  005_create_page_shares_table.py  006_add_database_triggers.py  007_add_name_and_username_to_users.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  permissions.py
backend/app/models/: base.py  flashcard.py  page.py  page_share.py  user.py
backend/app/routers/: admin.py  ai.py  auth.py  pages.py
backend/app/schemas/: ai.py  auth.py  page.py
backend/app/services/: ai_service.py  auth_service.py  pages_service.py  sharing_service.py
backend/tests/services/: test_ai_service.py
docs/: design.md  requirements.md  tasks.md
frontend/: .env.production.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreatePageModal.tsx  DeletePageModal.tsx  Header.tsx  Health.tsx  ImageUpload.tsx  ProtectedRoute.tsx
frontend/src/components/Editor/: AIMenu.tsx  TiptapEditor.tsx  Toolbar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Dashboard.tsx  EditorPage.tsx  Login.tsx  ProfilePage.tsx  Register.tsx  UsersPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: page.ts
(+2 files in other folders)
